--- a/musical-mashup-helper/src/app/components/songs/add-song/add-song.component.html
+++ b/musical-mashup-helper/src/app/components/songs/add-song/add-song.component.html
@@ -6,7 +6,7 @@
     <div>
         <label>Artist :</label>
         <select name="artist" formControlName="artist">
-            <option *ngFor="let artist of artists" [value]="artist.name">{{ artist.name }}</option>
+            <option *ngFor="let artist of artists" [value]="artist.id">{{ artist.name }}</option>
         </select>
     </div>
     <div>
