Angular Material Integration

--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
@@ -17,7 +17,8 @@
                 *ngFor="let s of tonality" 
                 [className]="idSelectedArtist.indexOf(s.artist) > -1 ? 'selected' : 'not-selected'"
                 [style.background-color]="colors.get(s.artist)">
-                {{ s.name }}
+                <div>{{ s.name }}</div>
+                <div *ngIf="!isInt(s.bpm)">{{ s.bpm }} BPM</div>
             </div>
         </td>
     </tr>
