Matrix mashup style

--- a/musical-mashup-helper/src/app/components/header/header.component.html
+++ b/musical-mashup-helper/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <button mat-button [routerLink]="''">
-        Mashup grid
+        Mashup table
     </button>
     <button mat-button [routerLink]="'list-song'">
         Songs
