--- a/musical-mashup-helper/src/app/components/mashup-helper/mashup-helper.component.html
+++ b/musical-mashup-helper/src/app/components/mashup-helper/mashup-helper.component.html
@@ -1,3 +1,8 @@
-<p>mashup-helper works!</p>
 
-<app-matrix></app-matrix>
+
+<div id="body">
+    <h1>Mashup Table</h1>
+
+    <p>Click on the artist to highlight their songs</p>
+    <app-matrix></app-matrix>
+</div>
