--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
@@ -1,25 +1,35 @@
-<div>
-    <ul *ngIf="artists && colors">
-        <li *ngFor="let artist of artists">
-            <button [style.background-color]="colors.get(artist.id)" (click)="onClickArtist(artist.id)">{{ artist.name }}</button>
-        </li>
-    </ul>
+<div id="body">
+    <div id="table">
+        <table *ngIf="dataLoaded && colors">
+            <tr>
+                <td class="axis"></td>
+                <th class="axis" scope="col" *ngFor="let tonality of tonalities">{{ tonality }}</th>
+            </tr>
+            <tr *ngFor="let bpm of songs, let i = index">
+                <th class="axis" scope="row">{{ min_bpm + i }}</th>
+                <td *ngFor="let tonality of bpm, let j = index">
+                    <div 
+                        *ngFor="let s of tonality" 
+                        [className]="idSelectedArtist.indexOf(s.artist) > -1 ? 'song selected' : 'song not-selected'"
+                        [style.background-color]="colors.get(s.artist)">
+                        <div>{{ s.name }}</div>
+                        <div *ngIf="!isInt(s.bpm)">{{ s.bpm }} BPM</div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="artists">
+        <ul *ngIf="artists && colors">
+            <li *ngFor="let artist of artists">
+                <button
+                [style.background-color]="colors.get(artist.id)"
+                [className]="idSelectedArtist.indexOf(artist.id) > -1 ? 'selector selected' : 'selector not-selected'" 
+                (click)="onClickArtist(artist.id)">
+                    <span class="name">{{ artist.name }}</span>
+                </button>
+            </li>
+        </ul>
+    </div>
 </div>
-<table *ngIf="dataLoaded && colors">
-    <tr>
-        <td></td>
-        <th scope="col" *ngFor="let tonality of tonalities">{{ tonality }}</th>
-    </tr>
-    <tr *ngFor="let bpm of songs, let i = index">
-        <th scope="row">{{ min_bpm + i }}</th>
-        <td *ngFor="let tonality of bpm, let j = index">
-            <div  
-                *ngFor="let s of tonality" 
-                [className]="idSelectedArtist.indexOf(s.artist) > -1 ? 'selected' : 'not-selected'"
-                [style.background-color]="colors.get(s.artist)">
-                <div>{{ s.name }}</div>
-                <div *ngIf="!isInt(s.bpm)">{{ s.bpm }} BPM</div>
-            </div>
-        </td>
-    </tr>
-</table>
+
