--- a/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
+++ b/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
@@ -3,7 +3,7 @@
         <h2>Add songs</h2>
         <app-add-song></app-add-song>
     </div>
-    <div id="list">
+    <div *ngIf="artists_name" id="list">
         <h2>All songs</h2>
         <table mat-table [dataSource]="songs">
             <!-- Name Column -->
@@ -15,7 +15,7 @@
             <!-- Artist Column -->
             <ng-container matColumnDef="artist">
                 <th mat-header-cell *matHeaderCellDef> Artist </th>
-                <td mat-cell *matCellDef="let element"> {{element.artist}} </td>
+                <td mat-cell *matCellDef="let element"> {{ artists_name.get(element.artist) }} </td>
             </ng-container>
         
             <!-- Bpm -->
