--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
@@ -1,5 +1,5 @@
 .song.not-selected{
-    opacity: 0.1;
+    opacity: 0.05;
 }
 
 .song.selected{
@@ -43,6 +43,7 @@ table, th, td {
 .song{
     text-align: center;
     padding: 8px;
+    transition: opacity 1s;
 }
 
 
