--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
@@ -40,6 +40,12 @@ table, th, td {
     font-weight: bolder;
 }
 
+.axis.tonalities{
+    position: sticky;
+    z-index: 100;
+    top: 0px;
+}
+
 .song{
     text-align: center;
     padding: 8px;
@@ -53,6 +59,8 @@ table, th, td {
 
 #artists ul{
     list-style: none;
+    position: sticky;
+    top: 40px;
     margin: 0;
 }
 
