--- a/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
+++ b/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
@@ -31,12 +31,15 @@
             </ng-container>
         
             <!-- Edit -->
-            <ng-container matColumnDef="edit">
-                <th mat-header-cell *matHeaderCellDef> Edit </th>
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Actions </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-button [routerLink]="'/add-song'" [queryParams]="{ id: element.id }">
                         Edit
-                    </button> 
+                    </button>
+                    <button mat-button color="warn" (click)="openDeleteWarning(element.id)">
+                        Supprimer
+                    </button>
                 </td>
             </ng-container>
         
