Added delete artist

--- a/musical-mashup-helper/src/app/components/artists/list-artist/list-artist.component.html
+++ b/musical-mashup-helper/src/app/components/artists/list-artist/list-artist.component.html
@@ -25,6 +25,9 @@
                     <button mat-button [routerLink]="'/add-artist'" [queryParams]="{ id: element.id }">
                         Edit
                     </button> 
+                    <button mat-button color="warn" (click)="openDeleteWarning(element.id)">
+                        Supprimer
+                    </button>
                 </td>
             </ng-container>
 
