--- a/musical-mashup-helper/src/app/components/mashup-helper/mashup-helper.component.html
+++ b/musical-mashup-helper/src/app/components/mashup-helper/mashup-helper.component.html
@@ -1,8 +1,10 @@
-
-
 <div id="body">
     <h1>Mashup Table</h1>
 
     <p>Click on the artist to highlight their songs</p>
     <app-matrix></app-matrix>
+    <a mat-fab color="primary" href="#body" class="toTop">
+        <mat-icon>keyboard_arrow_up</mat-icon>
+    </a>
 </div>
+
