--- a/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
+++ b/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
@@ -3,9 +3,10 @@
         <h2>Add songs</h2>
         <app-add-song></app-add-song>
     </div>
-    <div *ngIf="artists_name" id="list">
+    <div id="list">
+        <div *ngIf="songs && artists_name">
         <h2>All songs</h2>
-        <table mat-table [dataSource]="songs">
+        <table mat-table [dataSource]="dataSource">
             <!-- Name Column -->
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -46,8 +47,14 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        
+</div>
+        <mat-paginator [pageSizeOptions]="[10, 20, 50, 200]"
+            showFirstLastButtons 
+            aria-label="Select page of songs">
+        </mat-paginator>
     </div>
+
+
 </div>
 
 
