--- a/musical-mashup-helper/src/styles.scss
+++ b/musical-mashup-helper/src/styles.scss
@@ -6,3 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 :root {
     --material-min: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);;
   }
+
+  .mat-select-panel {
+    max-height: none !important;
+  }
