--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
@@ -10,7 +10,7 @@
                 <td *ngFor="let tonality of bpm, let j = index">
                     <div 
                         *ngFor="let s of tonality" 
-                        [className]="idSelectedArtist.indexOf(s.artist) > -1 ? 'song selected' : 'song not-selected'"
+                        [className]="filtersService.idSelectedArtists.indexOf(s.artist) > -1 ? 'song selected' : 'song not-selected'"
                         [style.background-color]="colors.get(s.artist)">
                         <div>{{ s.name }}</div>
                         <div *ngIf="!isInt(s.bpm)">{{ s.bpm }} BPM</div>
@@ -22,10 +22,10 @@
     <div id="artists">
         <div id="sticky">
             <div id="controls">
-                <button mat-button color="primary" (click)="selectAllArtists()">
+                <button mat-button color="primary" (click)="filtersService.selectArtists(artists)">
                     Select all
                 </button>
-                <button mat-button color="primary" (click)="deselectAllArtists()">
+                <button mat-button color="primary" (click)="filtersService.deselectAllArtists()">
                     Deselect all
                 </button>
             </div>
@@ -33,8 +33,8 @@
                 <li *ngFor="let artist of artists">
                     <button
                     [style.background-color]="colors.get(artist.id)"
-                    [className]="idSelectedArtist.indexOf(artist.id) > -1 ? 'selector selected' : 'selector not-selected'" 
-                    (click)="onClickArtist(artist.id)">
+                    [className]="filtersService.idSelectedArtists.indexOf(artist.id) > -1 ? 'selector selected' : 'selector not-selected'" 
+                    (click)="filtersService.changeArtist(artist.id)">
                         <span class="name">{{ artist.name }}</span>
                     </button>
                 </li>
