Matrix: Lighter color for borders

--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
@@ -13,7 +13,7 @@
 }
 
 #table{
-    width: 80%;
+    width: 90%;
 }
 
 #table table{
@@ -30,7 +30,7 @@
 }
 
 table, th, td {
-    border: 1px solid rgba(0,0,0,0.3);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .axis{
@@ -57,7 +57,7 @@ table, th, td {
 
 
 #artists{
-    width: 20%;
+    width: 10%;
 }
 
 #artists #sticky{
