--- a/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
+++ b/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
@@ -39,7 +39,7 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> Actions </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-button [routerLink]="'/add-song'" [queryParams]="{ id: element.id }">
+                    <button mat-button (click)="openEditDialog(element.id)">
                         Edit
                     </button>
                     <button mat-button color="warn" (click)="openDeleteWarning(element.id)">
