Matrix: Hover on row

--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
@@ -5,7 +5,7 @@
                 <td class="axis"></td>
                 <th class="axis tonalities" scope="col" *ngFor="let tonality of tonalities">{{ tonality }}</th>
             </tr>
-            <tr *ngFor="let bpm of songs, let i = index">
+            <tr class="row" *ngFor="let bpm of songs, let i = index">
                 <th class="axis" scope="row">{{ min_bpm + i }}</th>
                 <td *ngFor="let tonality of bpm, let j = index">
                     <div 
