--- a/musical-mashup-helper/src/app/components/mashup-helper/mashup-helper.component.scss
+++ b/musical-mashup-helper/src/app/components/mashup-helper/mashup-helper.component.scss
@@ -2,7 +2,13 @@
     padding: 20px;
 }
 
-.toTop{
+.toggle{
+    padding-right: 10px;
+    border-right: solid 1px rgba(0,0,0,0.12);
+    margin-right: 10px;
+}
+
+.controls{
     position: fixed;
     bottom: 10px;
     right: 10px;
