--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.html
@@ -6,13 +6,13 @@
                 <th class="axis tonalities" scope="col" *ngFor="let tonality of tonalities">{{ tonality }}</th>
             </tr>
             <tr class="row" *ngFor="let bpm of songs, let i = index">
-                <th class="axis" scope="row">{{ min_bpm + i }}</th>
+                <th class="axis" scope="row">{{ controlsService.min_bpm + i }}</th>
                 <td *ngFor="let tonality of bpm, let j = index">
                     <div 
                         *ngFor="let s of tonality, let k = index" 
                         [className]="controlsService.idSelectedArtists.indexOf(s.artist) > -1 ? 'song selected' : 'song not-selected'"
                         [style.background-color]="colors.get(s.artist)"
-                        (click)="openControlDialog(s.id, i, j, k)">
+                        (click)="openControlDialog(s, i, j, k)">
                         <div>{{ s.name }}</div>
                         <div *ngIf="!isInt(s.bpm)">{{ s.bpm }} BPM</div>
                     </div>
