--- a/musical-mashup-helper/src/app/components/songs/compatible-song/compatible-song.component.html
+++ b/musical-mashup-helper/src/app/components/songs/compatible-song/compatible-song.component.html
@@ -1,1 +1,18 @@
-<p>compatible-song works!</p>
+<h2 mat-dialog-title>Compatible songs</h2>
+<mat-dialog-content class="compatible-list" *ngIf="cs_by_artists && artists_name">
+    <mat-expansion-panel hideToggle *ngFor="let artist of cs_by_artists | keyvalue">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                {{ artists_name.get(artist.key) }}
+            </mat-panel-title>
+            <mat-panel-description>
+                {{ artist.value.length }}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-list role="list">
+            <mat-list-item *ngFor="let song of artist.value">
+                {{ song.name }} ( {{ song.bpm }}, {{ song.tonality }} )
+            </mat-list-item>
+        </mat-list>
+    </mat-expansion-panel>
+</mat-dialog-content>
