--- a/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
+++ b/musical-mashup-helper/src/app/components/mashup-helper/matrix/matrix.component.scss
@@ -7,27 +7,9 @@
     box-shadow: var(--material-min);
 }
 
-.song{
-    display: flex;
-}
-
-.indicator{
-    width: 10%;
-}
-
-.indicator .mat-icon{
-    font-size: 15px;
-    display: block;
-    color: white;
-}
-
 .prod{
     border: dashed 3px #3f51b5;
     box-sizing: border-box;
-}
-
-.song-info{
-    width: 90%;
 }
 
 #body{
@@ -98,6 +80,7 @@ table, th, td {
     max-height: 70vh;
     overflow-y: scroll;
     margin: 0;
+    padding-top: 12px;
     padding-inline-start: 10px;
 }
 
@@ -123,4 +106,28 @@ table, th, td {
 
 #artists ul li .selector.not-selected{
     opacity: 0.4;
+}
+
+.artist-control{
+    position: relative;
+}
+
+.mini-fabs{
+    position: absolute;
+    top: -12px;
+    right: 0;
+}
+
+.mini-fabs .mat-mini-fab{
+    height: 24px;
+    width: 24px;
+}
+
+.selector-icon{
+    font-size: 12px;
+    line-height: 8px;
+}
+
+.mini-fab-deselected{
+    background-color: gray;
 }
