--- a/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
+++ b/musical-mashup-helper/src/app/components/songs/list-song/list-song.component.html
@@ -38,13 +38,13 @@
             <!-- Prod -->
             <ng-container matColumnDef="prod">
                 <th mat-header-cell *matHeaderCellDef> Prod ? </th>
-                <td mat-cell *matCellDef="let element"> {{element.prod ? element.prod : '?'}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.prod !== undefined ? element.prod : '?'}} </td>
             </ng-container>
 
             <!-- Prod -->
             <ng-container matColumnDef="rapped">
                 <th mat-header-cell *matHeaderCellDef> Rapped ? </th>
-                <td mat-cell *matCellDef="let element"> {{element.rapped ? element.rapped : '?'}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.rapped !== undefined ? element.rapped : '?'}} </td>
             </ng-container>
 
             <!-- Edit -->
